test-components/aviator/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aviator
spec:
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 80
  - name: https
    protocol: TCP
    port: 8443
    targetPort: 443
  selector:
    app: aviator
